--- a/style.css
+++ b/style.css
@@ -1,20 +1,23 @@
 * {
   padding: 0;
   margin: 0;
+  /* background-color: #f4f4f4; */
 }
 .container-btn {
-  width: 100%;
-  height: 50px;
+  /* width: 100%; */
+  /* height: 50px; */
   display: flex;
   justify-content: center;
+  flex-direction: column;
 }
 .button_ {
   background-color: #0f1035;
   color: #fff;
   /* padding: 8px 10px; */
-  width: 200px;
+  width: 100px;
   margin: 10px;
   border: none;
+  height: 30px;
   outline: none;
   border-radius: 3px;
   cursor: pointer;
@@ -27,7 +30,38 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  border: 1px solid black;
+  margin-bottom: 20px;
 }
 #canvas-container canvas {
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.06); /* Adjust the shadow properties as needed */
+}
+.main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 750px;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid #ccc;
+  margin-top: 20px;
+  border-radius: 10px;
+}
+.box {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: flex-start;
+}
+.instruction {
+  font-size: 15px;
+  font-family: sans-serif;
+  margin-left: 8%;
+}
+.instruction ol {
+  font-weight: bold;
+  margin-top: 5px;
+}
+.instruction ul li {
+  padding: 5px 0;
 }
